@@ -21,7 +21,6 @@ Device 0 (VID=0502 and PID=337d) is UNKNOWN.
 +3. Check quality=6 colors and size in UDAV!!!
 +4. WX window/widgets
 5. Add 'XYZ' axis for inverse ticks positions + correctly parse "inverse" ranges
-6. Grid lines for NAN origin values are always located at far edges (like Box())
 
 ============= DOCS =============
 
@@ -32,7 +31,6 @@ Device 0 (VID=0502 and PID=337d) is UNKNOWN.
 
 3. Add FAQ about MPEG/GIF and PDF, JavaScript
 4. JSON samples in documentation ?!!
-5. mglFourier now make true inverse transform -- INCOMPATIBLE !!!
 
 ============= UDAV =============
 
